--- a/apps/backend/docker-compose.yml
+++ b/apps/backend/docker-compose.yml
@@ -43,6 +43,8 @@ services:
     depends_on:
       backend:
         condition: service_healthy   
+    env_file:
+      - .env.docker
     environment:
       KONG_DATABASE: "off"
       KONG_DECLARATIVE_CONFIG: /etc/kong/kong.yml
