added new compose.test yaml file for newman tests, exported collections & dev_env from postman, updated gitignore adding newman-report, moved .github workflows to project root

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,9 @@ newman/
 node_modules/
 dist/
 apps/frontend/wwwroot/css/site.css
+
+# Newman reports
+apps/backend/postman/newman-report.*
+
+# Postman globals
+apps/backend/postman/postman/globals/workspace.postman_globals.json
