--- a/apps/frontend/frontend.csproj
+++ b/apps/frontend/frontend.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <None Include="wwwroot\appsettings.json" CopyToOutputDirectory="Always" />
+    <PackageReference Include="MudBlazor" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
